ros_embedded/log/build_2023-04-30_00-06-06/serial_rw/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/pi/ros_embedded/install/serial_rw/lib/python3.10/site-packages/serial_rw/serial_rw.py", line 37
    '
    ^
SyntaxError: unterminated string literal (detected at line 37)

